Adjust overflow style to avoid drop down menu was cutted off.

--- a/src/table-fixed-header.styl
+++ b/src/table-fixed-header.styl
@@ -10,8 +10,13 @@
 }
 
 .scroll-header {
-    overflow: hidden;
     border-bottom: 2px solid $table-header-border-bottom-color
+
+    :global {
+        .rc-table-content {
+            overflow: hidden;
+        }
+    }
 
     .table {
         table {
